# claude-complete-ecosystem

./: .gitignore  COMPONENTS.md  INSTALLATION_REPORT.md  INTEGRATION.md  README.md  install.sh  test-installation.sh
agents/: CLAUDE.md  LICENSE  README.md  agent-protocols.md  example.env  install.sh  memory.md  research-findings-vector-improvement-integration.md  settings-template.json  setup-firecrawl-mcp.sh  task-registry.json  uninstall.sh
agents/agents/: agent-coordination-framework.md  backend-agent.md  control-agent.md  documentation-agent.md  (+8 more)
data/: build_vector_index.py  generate_installation_report.py  initialize_observation_system.py  process_test_data.py  setup-vector-database.sh
doc-tools/: DocPostProcessor.py  DocPostProcessorGUI.py  DocScraper.py  DocScraperGUI.py  README.md  SimpleDocScraper.py  process_docs_example.py  process_multi_folder_example.py  requirements.txt  test_stop.py
vector-server/: DEPLOYMENT_GUIDE.md  MAINTENANCE_GUIDE.md  PROJECT_SUMMARY.md  README.md  pyproject.toml  run_tests.py
vector-server/docs/: index.md
vector-server/docs/api/: models.md  reference.md
vector-server/docs/deployment/: security.md
vector-server/docs/development/: contributing.md  setup.md  testing.md  troubleshooting.md
vector-server/docs/research/: mcp-protocol-standards.md  research-index.md  technical-writing-guidelines.md  vector-database-patterns.md
vector-server/src/mcp_vector_server/: __init__.py  __main__.py  models.py  simple_server.py
vector-server/tests/: README.md  __init__.py  conftest.py  test_integration.py  test_mcp_tools.py  test_models.py  test_performance.py
(+83 files in other folders)
