[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-vector-server"
version = "0.1.0"
description = "MCP server for semantic search across tech stack documentation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Emanuel", email = "emanuel@example.com" }
]
keywords = ["mcp", "vector-search", "documentation", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.2.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[project.scripts]
mcp-vector-server = "mcp_vector_server.__main__:run"

[project.urls]
Homepage = "https://github.com/yourusername/mcp-vector-server"
Repository = "https://github.com/yourusername/mcp-vector-server"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true